--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -58,10 +58,10 @@ h6 {
 
 #futbol {
   background-color: rgb(32, 155, 16);
-  background-position: center center;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed
+  background-attachment: fixed;
     
 }
 
@@ -188,3 +188,4 @@ h6 {
   display: flex;
   align-items: center;
 }
+
