--- a/src/views/paginas/futbol.hbs
+++ b/src/views/paginas/futbol.hbs
@@ -1,7 +1,7 @@
 <div id="futbol">
     <div class="d-flex justify-content-around">
         <div class="container-fluid">
-            <div id="tablaEquipo" class="col-md-10 m-2 p-2">
+            <div id="tablaEquipo" class="col-md-6 m-2 p-2">
                 <form class="d-flex">
                     <img class="rounded mx-auto d-block" src="/img/pelotaF.png" alt="" width="50" height="50">
                     <h2 class=" me-4"><b>EQUIPOS</b></h2>
@@ -31,22 +31,21 @@
                     </tbody>
                 </table>
             </div>
-        </div>
-        <div class="container-fluid">
-            <div class="col-6 m-2">
-                <a class="btn btn-primary btn-lg" href="/paginas/crearEquipoFutbol/{{user.idUsuarios}}">Crea tu Equipo!</a>
-            </div>
-            <div class="col-6 m-2">
-                <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#misEquipo"
-                    data-bs-whatever="@equipo">Mis Equipos</button>
+            <div class="col-3 m-2">
+                    <a class="btn btn-primary" href="/paginas/crearEquipoFutbol/{{user.idUsuarios}}">Crea tu Equipo!</a>
+                </div>
+                <div class="col-3 m-2">
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#misEquipo" data-bs-whatever="@equipo">Mis Equipos</button>
             </div>
         </div>
+        
     </div>
     <div class="container">
         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
             <button class="btn btn-danger" data-toggle="modal" type="submit">Buscar cancha</button>
         </div>
     </div>
+    <a href="/paginas/deporte" type="button" class="btn btn-primary">Volver</a>
 </div>
 <!-- The Modal -->
 <div class="modal fade" id="misEquipo" tabindex="-1">
@@ -74,11 +73,12 @@
             </div>
             <!-- Modal footer -->
             <div class="modal-footer" id="crearEquipo">
-                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
             </div>
         </div>
     </div>
 </div>
+
 {{!--
 <script>
     var exampleModal = document.getElementById('crearEquipo')
