--- a/src/views/paginas/equipo.hbs
+++ b/src/views/paginas/equipo.hbs
@@ -1,6 +1,6 @@
 <div class="container">
     <table class="table table-dark table-striped">
-        <thead>
+        <thead class="table-danger">
             <h2 class="text-center" style="color: aquamarine;">{{club}}</h2>
             <th>Nombre</th>
             <th>Apellido</th>
@@ -13,9 +13,8 @@
                 <td>{{apellido}}</td>
                 <td>{{posicion}}</td>                
             </tr>
-                {{/each}}
-            
+                {{/each}}            
         </tbody>
     </table>
-
+<button class="btn btn-info">Ser Parte!!!</button>
 </div>
