--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -1,26 +1,18 @@
-<<<<<<< HEAD
 {{#if user}}
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-=======
-
-{{#if user.rol}}
-<nav class="navbar navbar-expand-md navbar-dark bg-dark" aria-label="Fourth navbar example">
->>>>>>> 85f68354f4afb9dfe8e8acdbd4310da8346a326d
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">
             <img src="/img/logo4.png" alt="" width="60" height="60" class="d-inline-block ">
         </a>
-
         <div class="collapse navbar-collapse" id="navbarsExample04">
-            <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                
+            <ul class="navbar-nav me-auto mb-2 mb-md-0">                
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-bs-toggle="dropdown"
                         aria-expanded="false">Deportes</a>
                     <ul class="dropdown-menu" aria-labelledby="dropdown04">
                         <li><a class="dropdown-item" href="/paginas/futbol/{{user.idUsuarios}}">Fútbol</a></li>
-                        <li><a class="dropdown-item" href="/paginas/basquet/:id">Básquet</a></li>
-                        <li><a class="dropdown-item" href="/paginas/padel/:id">Pádel</a></li>
+                        <li><a class="dropdown-item" href="/paginas/basquet">Básquet</a></li>
+                        <li><a class="dropdown-item" href="/paginas/padel">Pádel</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -31,21 +23,15 @@
                         <li><a class="dropdown-item" href="/paginas/futbol/:id">Básquet</a></li>
                         <li><a class="dropdown-item" href="/paginas/futbol/:id">Pádel</a></li>
                     </ul>
-                </li>
-                 
-            </ul>
-            
+                </li>                 
+            </ul>            
         </div>
-
         <li class="nav-item">
             <a class="nav-link " href="#card" tabindex="-1" aria-disabled="true" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Bienvenido {{user.nombreUsuario}}</a>
-        </li>
-        
+        </li>        
         <li class="nav-item">
             <a class="nav-link-dark" href="/cerrarSesion" tabindex="-1" aria-disabled="true">Salir</a>
         </li>
-    </div>
-    
+    </div>    
 </nav>
-
 {{/if}}
