--- a/src/views/paginas/equipo.hbs
+++ b/src/views/paginas/equipo.hbs
@@ -16,5 +16,7 @@
                 {{/each}}            
         </tbody>
     </table>
-<button class="btn btn-info">Ser Parte!!!</button>
+    {{#unless pertenezco}}
+        <a class="btn btn-info btn-lg" href="/paginas/ingresarAlEquipo/{{user.idUsuarios}}">Ser Parte!!!</a>
+    {{/unless}}
 </div>
