--- a/src/views/ingreso/ingreso.hbs
+++ b/src/views/ingreso/ingreso.hbs
@@ -37,5 +37,10 @@
                 </div>
             </div>
         </div>
+        <!--agregue acceso admin -->
+        <div id="linkCentro" class="col-md mx-auto">
+            <b>Ingresar como... <a href="paginas/vistaAdmin"  type="link" class="link link-primary link-lg">Administrador</a></b>
+            <h6>© 2021 APPasionados</h6>
+        </div>
     </div>
 </main>
