--- a/src/views/paginas/cancha.hbs
+++ b/src/views/paginas/cancha.hbs
@@ -1,13 +1,13 @@
-<div id="Cancha">
+<div id="cancha">
     
     <form id="formCancha" class="row g-4" >
         <div class="col-md-12">
             
             <div class="text-center"><h1>Mi Cancha</h1></div>
-            <input type="text" class="form-control" id="validationDefault01" value="Nombre" required>
+            <input type="text" class="form-control" id="validationDefault01" placeholder="Nombre" autofocus required>
             <br>
 
-            <input type="text" class="form-control" id="validationDefault02" value="Dirección" required>
+            <input type="text" class="form-control" id="validationDefault02" placeholder="Dirección" required>
             <br>
             
             <div class="mb-3">
