--- a/src/views/paginas/equipo.hbs
+++ b/src/views/paginas/equipo.hbs
@@ -17,5 +17,7 @@
             
         </tbody>
     </table>
-
+    <div class="col-2  p-3">
+        <a href="/paginas/futbol/{{user.idUsuarios}}" type="button" class="btn btn-dark">Volver</a>
+    </div>
 </div>
