--- a/src/views/paginas/futbol.hbs
+++ b/src/views/paginas/futbol.hbs
@@ -2,52 +2,56 @@
 <div id="futbol">
     <div class="d-flex justify-content-around">
         <div class="container-fluid">
-            <div id="tablaEquipo" class="col-md-6 m-2 p-2">
-                <form class="d-flex">
-                    <img class="rounded mx-auto d-block" src="/img/pelotaF.png" alt="" width="50" height="50">
-                    <h2 class=" me-4"><b>EQUIPOS</b></h2>
-                    <div class="d-flex m-2">
-                        <input class="form-control" type="search" placeholder="Buscar equipo" aria-label="Search">
-                        <button class="btn btn-danger me-3" type="submit">Ir</button>
-                        <input class="form-control" type="search" placeholder="Buscar jugador" aria-label="Search">
-                        <button class="btn btn-danger" type="submit">Ir</button>
+            <div class="row justify-content-between">
+                <div id="tablaEquipo" class="col-md-6 m-2 p-2">
+                    <form class="d-flex">
+                        <img class="rounded mx-2 d-block" src="/img/pelotaF.png" alt="" width="50" height="50">
+                        <a class="navbar-brand" href="#">
+                            <h2 class=" me-3"><b>EQUIPOS</b></h2>
+                        </a>
+                        
+                        <div class="d-flex justify-content-between m-auto ">
+                            <div class="btn-group" role="group" aria-label="Basic outlined example">
+                                <button type="button" class="btn btn-primary">Jugadores</button>
+                            </div>
+                            <div class="btn-group" role="group" aria-label="Basic outlined example">
+                                <a type="button" class="btn btn-success"href="/paginas/crearEquipoFutbol/{{user.idUsuarios}}">Crear Equipo</a>
+                                <button type="button" class="btn btn-success"data-bs-toggle="modal" data-bs-target="#misEquipo" data-bs-whatever="@equipo">Mis Equipos</button>
+                              
+                            </div>
+                        </div>
+                        
+                    </form>
+                    <div id="scroll">
+                        <table id="tablaScroll" class="table table-hover table-info">
+                            <thead>
+                                <tr>
+                                    <th>Capitan</th>
+                                    <th>Nombre</th>
+                                    <th>Deporte</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {{#each equipos}}
+                                <tr>
+                                    <td data-bs-toggle="tooltip" data-bs-placement="top" title="{{email}}">{{nombreUsuario}}
+                                    </td>
+                                    <td><a href="/paginas/equipo/{{nombreEquipo}}">{{nombreEquipo}}</a></td>
+                                    <td>{{deporte}}</td>
+                                </tr>
+                                {{/each}}
+                            </tbody>
+                        </table>
                     </div>
-                </form>
-                <table class="table table-hover table-info">
-                    <thead>
-                        <tr>
-                            <th>Capitan</th>
-                            <th>Nombre</th>
-                            <th>Deporte</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {{#each equipos}}
-                        <tr>
-                            <td data-bs-toggle="tooltip" data-bs-placement="top" title="{{email}}">{{nombreUsuario}}
-                            </td>
-                            <td><a href="/paginas/equipo/{{nombreEquipo}}">{{nombreEquipo}}</a></td>
-                            <td>{{deporte}}</td>
-                        </tr>
-                        {{/each}}
-                    </tbody>
-                </table>
-            </div>
-            <div class="col-3 m-2">
-                    <a class="btn btn-primary" href="/paginas/crearEquipoFutbol/{{user.idUsuarios}}">Crea tu Equipo!</a>
                 </div>
-                <div class="col-3 m-2">
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#misEquipo" data-bs-whatever="@equipo">Mis Equipos</button>
+               
             </div>
         </div>
-        
     </div>
-    <div class="container">
-        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-            <button class="btn btn-danger" data-toggle="modal" type="submit">Buscar cancha</button>
-        </div>
+    <div class="col-2  p-3">
+        <a href="/paginas/deporte" type="button" class="btn btn-dark">Volver</a>
     </div>
-    <a href="/paginas/deporte" type="button" class="btn btn-primary">Volver</a>
+    
 </div>
 <!-- The Modal -->
 <div class="modal fade" id="misEquipo" tabindex="-1">
