--- a/src/views/paginas/inicio.hbs
+++ b/src/views/paginas/inicio.hbs
@@ -2,19 +2,21 @@
     <div class="container">
         <div class="row justify-content-between">
             <div id="btnCentro" class="col-md py-5 mx-auto">
-                <a href="ingreso" type="button" class="btn btn-success btn-lg" data-bs-toggle="tooltip" data-bs-placement="top" title="Inicia como jugador para ser parte de un equipo y realizar deportes.">JUGADOR</a>
+                <a href="deporte" type="button" class="btn btn-success btn-lg" data-bs-toggle="tooltip" data-bs-placement="top" title="Inicia como jugador para ser parte de un equipo y realizar deportes.">JUGADOR</a>
             </div>
             <div id="btnCentro" class="col-md py-5 mx-auto">
                 <!-- logo de la app -->
                 <img src="/img/logo4.png" alt="Logo App" class="mx-1" width="300px">                
             </div>
             <div id="btnCentro" class="col-md py-5 mx-auto">
-                <a href="ingresoDuenio" type="button" class="btn btn-warning btn-lg" data-bs-toggle="tooltip" data-bs-placement="top" title="Inicia como cancha para ingresar tu establecimiento deportivo.">CANCHA</a>                
+                <a href="duenio" type="button" class="btn btn-warning btn-lg" data-bs-toggle="tooltip" data-bs-placement="top" title="Inicia como cancha para ingresar tu establecimiento deportivo.">CANCHA</a>                
             </div>
         </div>
     </div>
+    <!--
     <div id="linkCentro" class="col-md mx-auto">
         <b>Ingresar como... <a href="paginas/vistaAdmin"  type="link" class="link link-primary link-lg">Administrador</a></b>
         <h6>© 2021 APPasionados</h6>
     </div>
+    -->
 </div>
