--- a/src/views/paginas/miEquipo.hbs
+++ b/src/views/paginas/miEquipo.hbs
@@ -16,4 +16,7 @@
             {{/each}}
         </tbody>
     </table>
+    <div class="col-2  p-3">
+        <a href="/paginas/futbol/{{user.idUsuarios}}" type="button" class="btn btn-dark">Volver</a>
+    </div>
 </div>
