--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -1,13 +1,7 @@
-<<<<<<< HEAD
 {{#if user}}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-=======
-
-{{#if user.rol}}
-<nav class="navbar navbar-expand-md navbar-dark bg-dark" aria-label="Fourth navbar example">
->>>>>>> 85f68354f4afb9dfe8e8acdbd4310da8346a326d
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand" href="/paginas/inicio">
             <img src="/img/logo4.png" alt="" width="60" height="60" class="d-inline-block ">
         </a>
 
@@ -23,22 +17,15 @@
                         <li><a class="dropdown-item" href="/paginas/padel/:id">Pádel</a></li>
                     </ul>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-bs-toggle="dropdown"
-                        aria-expanded="false">Canchas</a>
-                    <ul class="dropdown-menu" aria-labelledby="dropdown04">
-                        <li><a class="dropdown-item" href="/paginas/futbol/:id">Fútbol</a></li>
-                        <li><a class="dropdown-item" href="/paginas/futbol/:id">Básquet</a></li>
-                        <li><a class="dropdown-item" href="/paginas/futbol/:id">Pádel</a></li>
-                    </ul>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Canchas</a>
                 </li>
-                 
             </ul>
             
         </div>
 
         <li class="nav-item">
-            <a class="nav-link " href="#card" tabindex="-1" aria-disabled="true" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Bienvenido {{user.nombreUsuario}}</a>
+            <a class="nav-link " href="#" aria-disabled="true" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Bienvenido {{user.nombreUsuario}}</a>
         </li>
         
         <li class="nav-item">
