agregue pagina dueño, modifique fondo de equipos

--- a/src/views/paginas/cancha.hbs
+++ b/src/views/paginas/cancha.hbs
@@ -31,8 +31,11 @@
             </div>
     </form>
     <br>
-    <button type="submit" onclick="location.href='/ingresoDuenio'" class="btn btn-success btn-block">
-        Crear Cancha
+    <button type="submit" onclick="location.href='#'" class="btn btn-success btn-block">
+        Cargar
+    </button>
+    <button onclick="location.href='/paginas/duenio'" class="btn btn-danger btn-block">
+        Cancelar
     </button>
 </div>    
 
