--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -142,14 +142,13 @@ h6 {
 }
 
 #cancha {
-  background-image: url(../img/fut.jpg);
-  background-position: center center;
+  background-image: url(../img/duenio.jpg);
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  height: 39rem;
-  padding-bottom: 0%;
-  margin-bottom: 0%
+  width: 100%;
+  height: 535px;
 }
 
 #formCancha{
@@ -196,6 +195,15 @@ h6 {
 
 }
 
+#scrollDuenio {
+  overflow-y: scroll;
+  width: 970px;
+  height: 379px;
+  display: block;
+
+}
+
+
 #formulario{
   background-image: url(../img/verde1.jpg);
   background-position: center;
@@ -223,4 +231,8 @@ h6 {
   padding: 30px 0 0; /* Height of navbar */
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
   background: rgba(255, 254, 254, 0.61)
+}
+
+#titDuenio{
+  color: blanchedalmond;
 }
