--- a/src/views/paginas/equipo.hbs
+++ b/src/views/paginas/equipo.hbs
@@ -1,25 +1,28 @@
-<div class="container">
-    <table class="table table-dark table-striped">
-        <thead class="table-danger">
-            <h2 class="text-center" style="color: aquamarine;">{{club}}</h2>
-            <th>Nombre</th>
-            <th>Apellido</th>
-            <th>Posicion</th>
-        </thead>
-        <tbody>
-            {{#each equipo}}
-            <tr>
-                <td>{{nombre}}</td>
-                <td>{{apellido}}</td>
-                <td>{{posicion}}</td>                
-            </tr>
-                {{/each}}            
-        </tbody>
-    </table>
-    <div class="col-2  p-3">
-        <a href="/paginas/futbol/{{user.idUsuarios}}" type="button" class="btn btn-dark">Volver</a>
+<div id="formulario" class="container">
+    <div class="col-md-9 m-auto p-4">
+        <table class="table table-dark table-striped">
+            <thead class="table-danger">
+                <h2 id="semiTransparente" class="text-center py-2" style="color: rgb(0, 0, 0);">{{club}}</h2>
+                <th>Nombre</th>
+                <th>Apellido</th>
+                <th>Posicion</th>
+            </thead>
+            <tbody>
+                {{#each equipo}}
+                <tr>
+                    <td>{{nombre}}</td>
+                    <td>{{apellido}}</td>
+                    <td>{{posicion}}</td>                
+                </tr>
+                    {{/each}}            
+            </tbody>
+        </table>
+        <div class="col-2  p-3">
+            <a href="/paginas/futbol/{{user.idUsuarios}}" type="button" class="btn btn-dark">Volver</a>
+        </div>
+        {{#unless pertenezco}}
+            <a class="btn btn-info btn-lg" href="/paginas/ingresarAlEquipo/{{user.idUsuarios}}">Ser Parte!!!</a>
+        {{/unless}}
     </div>
-    {{#unless pertenezco}}
-        <a class="btn btn-info btn-lg" href="/paginas/ingresarAlEquipo/{{user.idUsuarios}}">Ser Parte!!!</a>
-    {{/unless}}
+    
 </div>
