--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -10,7 +10,7 @@
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-bs-toggle="dropdown"
                         aria-expanded="false">Deportes</a>
                     <ul class="dropdown-menu" aria-labelledby="dropdown04">
-                        <li><a class="dropdown-item" href="/paginas/futbol/{{user.idUsuarios}}">Fútbol</a></li>
+                        <li><a class="dropdown-item" href="/paginas/futbol">Fútbol</a></li>
                         <li><a class="dropdown-item" href="/paginas/basquet">Básquet</a></li>
                         <li><a class="dropdown-item" href="/paginas/padel">Pádel</a></li>
                     </ul>
