--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -203,3 +203,8 @@ h6 {
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
   background: rgba(255, 254, 254, 0.61)
 }
+#volver {
+  position:fixed;
+  bottom: 0;
+  margin-bottom: 4px
+}
