--- a/src/views/paginas/futbol.hbs
+++ b/src/views/paginas/futbol.hbs
@@ -25,7 +25,7 @@
                         <tr>
                             <td data-bs-toggle="tooltip" data-bs-placement="top" title="{{email}}">{{nombreUsuario}}
                             </td>
-                            <td><a href="/paginas/equipo/{{nombreEquipo}}">{{nombreEquipo}}</a></td>
+                            <td><a href="/paginas/equipo/{{nombreEquipo}}&{{idDeportes}}">{{nombreEquipo}}</a></td>
                             <td>{{deporte}}</td>
                         </tr>
                         {{/each}}
@@ -45,7 +45,7 @@
 </div>
 
 
-<a href="/paginas/deporte" type="button" class="btn btn-primary">Volver</a>
+<a id="volver" href="/paginas/deporte" type="button" class="btn btn-primary">Volver</a>
 </div>
 
 <!-- The Modal -->
@@ -66,7 +66,7 @@
                         {{#each misEquipos}}
                         <tr>
                             <td><i>
-                                    <h4><a href="/paginas/miEquipo/{{nombreEquipo}}">{{nombreEquipo}}</a></h4>
+                                    <h4><a class="text-white" href="/paginas/miEquipo/{{nombreEquipo}}">{{nombreEquipo}}</a></h4>
                                 </i></td>
                         </tr>
                         {{/each}}
