--- a/src/views/paginas/crearEquipoFutbol.hbs
+++ b/src/views/paginas/crearEquipoFutbol.hbs
@@ -36,7 +36,7 @@
                 <button type="submit" class="btn btn-success btn-block">
                     Crear
                 </button>
-                <button onclick="location.href='/paginas/futbol/{{user.idUsuarios}}'" class="btn btn-danger btn-block">
+                <button onclick="location.href='/paginas/futbol'" class="btn btn-danger btn-block">
                     Cancelar
                 </button>
             </div>
