--- a/src/views/paginas/padel.hbs
+++ b/src/views/paginas/padel.hbs
@@ -4,7 +4,7 @@
             <div id="tablaEquipo" class="col-md-12">
                 <form class="d-flex">
                     <img class="rounded mx-auto d-block" src="/img/pelotaP.png" alt="" width="50" height="50">
-                    <h2 class=" me-4"><b>EQUIPOS</b></h2>
+                    <h2 class="text-white me-4"><b>EQUIPOS</b></h2>
                     <div class="d-flex m-2">
                         <input class="form-control" type="search" placeholder="Buscar equipo" aria-label="Search">
                         <button class="btn btn-warning me-3" type="submit">Ir</button>
@@ -27,9 +27,6 @@
                             <td>1</td>
                             <td>Equipo1</td>
                             <td>7</td>
-                                <!--<td>{{numero}}</td>
-                                <td>{{nombre}}</td>
-                                <td>{{cantidadJugadores}}</td>-->
                         </tr>
                         <tr>
                             <td>2</td>
@@ -68,8 +65,8 @@
         <div class="container-fluid">
             <div id="tablaEquipo" class="col-md-12">
                 <form class="d-flex">
-                    <h2 class=" me-4"><b>MI EQUIPO</b></h2>
-                    <h3><i>Equipo1</i></h3>
+                    <h2 class="text-white me-4"><b>MI EQUIPO</b></h2>
+                    <h3 class="text-white"><i>Equipo1</i></h3>
                 </form>
                 <table class="table table-hover table-success ">
                     <thead>
