--- a/src/views/paginas/miEquipo.hbs
+++ b/src/views/paginas/miEquipo.hbs
@@ -17,6 +17,6 @@
         </tbody>
     </table>
     <div class="col-2  p-3">
-        <a href="/paginas/futbol/{{user.idUsuarios}}" type="button" class="btn btn-dark">Volver</a>
+        <a id="volver" href="/paginas/futbol" type="button" class="btn btn-dark">Volver</a>
     </div>
 </div>
