--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -22,7 +22,7 @@
             
         </div>
         <li class="nav-item">
-            <a class="nav-link " href="#" aria-disabled="true" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Bienvenido {{user.nombreUsuario}}</a>
+            <a class="nav-link " href="#" aria-disabled="true" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Bienvenido/a {{user.nombreUsuario}}</a>
         </li>
         
         <li class="nav-item">
