--- a/src/views/paginas/futbol.hbs
+++ b/src/views/paginas/futbol.hbs
@@ -1,53 +1,87 @@
 <div id="futbol">
-    <div class="d-flex justify-content-around">
-        <div class="container-fluid">
-            <div class="row justify-content-between">
-                <div id="tablaEquipo" class="col-md-6 m-2 p-2">
-                    <form class="d-flex">
-                        <img class="rounded mx-2 d-block" src="/img/pelotaF.png" alt="" width="50" height="50">
-                        <a class="navbar-brand" href="#">
-                            <h2 class=" text-white me-3"><b>EQUIPOS</b></h2>
-                        </a>
+    <div class="container-fluid">
+        <div class="d-flex justify-content-around">
+            <div id="tablaEquipo" class="col-md-6 m-2 p-2">
+                <form class="d-flex">
+                    <img class="rounded mx-2 d-block" src="/img/pelotaF.png" alt="" width="50" height="50">
+                    <a class="navbar-brand" href="#">
+                        <h2 class=" text-white me-3"><b>EQUIPOS</b></h2>
+                    </a>
 
-                        <div class="d-flex justify-content-between m-auto ">
-                            <div class="btn-group" role="group" aria-label="Basic outlined example">
-                                <button type="button" class="btn btn-primary">Jugadores</button>
-                            </div>
-                            <div class="btn-group" role="group" aria-label="Basic outlined example">
-                                <a type="button" class="btn btn-success"
-                                    href="/paginas/crearEquipoFutbol/{{user.idUsuarios}}">Crear Equipo</a>
-                                <button type="button" class="btn btn-success" data-bs-toggle="modal"
-                                    data-bs-target="#misEquipo" data-bs-whatever="@equipo">Mis Equipos</button>
-
-                            </div>
+                    <div class="d-flex justify-content-between m-auto ">
+                        <div class="btn-group" role="group" aria-label="Basic outlined example">
+                            <button type="button" class="btn btn-primary">Jugadores</button>
                         </div>
-
-                    </form>
-                    <div id="scroll">
-                        <table class="table table-hover table-info">
-                            <thead class="fixed">
-                                <tr>
-                                    <th>Capitan</th>
-                                    <th>Nombre</th>
-                                    <th>Deporte</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {{#each equipos}}
-                                <tr>
-                                    <td data-bs-toggle="tooltip" data-bs-placement="top" title="{{email}}">
-                                        {{nombreUsuario}}
-                                    </td>
-                                    <td><a href="/paginas/equipo/{{nombreEquipo}}&{{idDeportes}}">{{nombreEquipo}}</a></td>
-                                    <td>{{deporte}}</td>
-                                </tr>
-                                {{/each}}
-                            </tbody>
-                        </table>
+                        <div class="btn-group" role="group" aria-label="Basic outlined example">
+                            <a type="button" class="btn btn-success"
+                                href="/paginas/crearEquipoFutbol/{{user.idUsuarios}}">Crear Equipo</a>
+                            <button type="button" class="btn btn-success" data-bs-toggle="modal"
+                                data-bs-target="#misEquipo" data-bs-whatever="@equipo">Mis Equipos</button>
+                        </div>
                     </div>
-                </div>
 
+                </form>
+                <div id="scroll">
+                    <table class="table table-hover table-info">
+                        <thead class="fixed">
+                            <tr>
+                                <th>Capitán</th>
+                                <th>Nombre</th>
+                                <th>Deporte</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {{#each equipos}}
+                            <tr>
+                                <td data-bs-toggle="tooltip" data-bs-placement="top" title="{{email}}">
+                                    {{nombreUsuario}}
+                                </td>
+                                <td><a href="/paginas/equipo/{{nombreEquipo}}&{{idDeportes}}">{{nombreEquipo}}</a></td>
+                                <td>{{deporte}}</td>
+                            </tr>
+                            {{/each}}
+                        </tbody>
+                    </table>
+                </div>
             </div>
+<!--Tabla Canchas-->
+            <div id="tablaEquipo" class="col-md-6 m-2 p-2">
+                <form class="d-flex">
+                    <a class="navbar-brand" href="#">
+                        <h2 class=" text-white me-3 px-5"><b>CANCHAS</b></h2>
+                    </a>
+
+                    <div class="d-flex justify-content-between m-auto ">
+                        <input type="text" class="form-control" name="buscarCancha" placeholder="Buscar Cancha" autofocus required>
+                        <button type="button" class="btn btn-danger">Ir</button>
+                    </div>
+
+                </form>
+                <div id="scroll">
+                    <table class="table table-hover table-info">
+                        <thead class="fixed">
+                            <tr>
+                                <th>Nombre</th>
+                                <th>Dirección</th>
+                                <th>Formato</th>
+                                <th>Número</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {{#each cancha}}
+                            <tr>
+                                <td data-bs-toggle="tooltip" data-bs-placement="top" title="{{email}}">
+                                    {{nombreUsuario}}
+                                </td>
+                                <td><a href="/paginas/equipo/{{nombreEquipo}}&{{idDeportes}}">{{nombreEquipo}}</a></td>
+                                <td>{{deporte}}</td>
+                            </tr>
+                            {{/each}}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
         </div>
     </div>
     <div class="col-2  p-3">
