--- a/src/views/paginas/miEquipo.hbs
+++ b/src/views/paginas/miEquipo.hbs
@@ -1,4 +1,4 @@
-<div id="formulario" class="container">
+<div id="formularioF" class="container">
     <div class="col-md-9 m-auto p-4">
         <table class="table table-dark">
             <h3><p id="semiTransparente" class="text-center py-2">{{equipo}}</p></h3>
