--- a/src/views/paginas/padel.hbs
+++ b/src/views/paginas/padel.hbs
@@ -1,130 +1,128 @@
 <div id="padel">
-    <div class="d-flex justify-content-around">
-        <div class="container-fluid">
-            <div id="tablaEquipo" class="col-md-12">
+    <div class="container-fluid">
+        <div class="d-flex justify-content-around">
+            <div id="tablaEquipo" class="col-md-6 m-2 p-2">
                 <form class="d-flex">
-                    <img class="rounded mx-auto d-block" src="/img/pelotaP.png" alt="" width="50" height="50">
-                    <h2 class="text-white me-4"><b>EQUIPOS</b></h2>
-                    <div class="d-flex m-2">
-                        <input class="form-control" type="search" placeholder="Buscar equipo" aria-label="Search">
-                        <button class="btn btn-warning me-3" type="submit">Ir</button>
-                        <input class="form-control" type="search" placeholder="Buscar jugador" aria-label="Search">
-                        <button class="btn btn-warning" type="submit">Ir</button>
+                    <img class="rounded mx-2 d-block" src="/img/pelotaP.png" alt="" width="50" height="50">
+                    <a class="navbar-brand" href="#">
+                        <h2 class=" text-white me-3"><b>EQUIPOS</b></h2>
+                    </a>
+
+                    <div class="d-flex justify-content-between m-auto ">
+                        <div class="btn-group" role="group" aria-label="Basic outlined example">
+                            <button type="button" class="btn btn-primary">Jugadores</button>
+                        </div>
+                        <div class="btn-group" role="group" aria-label="Basic outlined example">
+                            <a type="button" class="btn btn-info"
+                                href="/paginas/crearEquipoPadel/{{user.idUsuarios}}">Crear Equipo</a>
+                            <button type="button" class="btn btn-info" data-bs-toggle="modal"
+                                data-bs-target="#misEquipo" data-bs-whatever="@equipo">Mis Equipos</button>
+                        </div>
                     </div>
+
                 </form>
-                <table class="table table-hover table-info">
-                    <thead>
-                        <tr>
-                            <th>Nº de Equipo</th>
-                            <th>Nombre</th>
-                            <th>Nº de Jugadores</th>
-                                
-                        </tr> 
-                    </thead>        
-                        
-                    <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td>Equipo1</td>
-                            <td>7</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>Equipo2</td>
-                            <td>9</td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>Equipo3</td>
-                            <td>6</td>
-                        </tr>
-                        <tr>
-                            <td>4</td>
-                            <td>Equipo4</td>
-                            <td>7</td>
-                        </tr>
-                        <tr>
-                            <td>5</td>
-                            <td>Equipo5</td>
-                            <td>7</td>
-                        </tr>
-                        <tr>
-                            <td>6</td>
-                            <td>Equipo6</td>
-                            <td>9</td>
-                        </tr>
-                        <tr>
-                            <td>7</td>
-                            <td>Equipo7</td>
-                            <td>8</td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div id="scroll">
+                    <table class="table table-hover table-info">
+                        <thead class="fixed">
+                            <tr>
+                                <th>Capitán</th>
+                                <th>Nombre</th>
+                                <th>Deporte</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {{#each equipos}}
+                            <tr>
+                                <td data-bs-toggle="tooltip" data-bs-placement="top" title="{{email}}">
+                                    {{nombreUsuario}}
+                                </td>
+                                <td><a href="/paginas/equipo/{{nombreEquipo}}&{{idDeportes}}">{{nombreEquipo}}</a></td>
+                                <td>{{deporte}}</td>
+                            </tr>
+                            {{/each}}
+                        </tbody>
+                    </table>
+                </div>
             </div>
-        </div>
-        <div class="container-fluid">
-            <div id="tablaEquipo" class="col-md-12">
+
+    <!--Tabla Canchas-->
+            <div id="tablaEquipo" class="col-md-6 m-2 p-2">
                 <form class="d-flex">
-                    <h2 class="text-white me-4"><b>MI EQUIPO</b></h2>
-                    <h3 class="text-white"><i>Equipo1</i></h3>
+                    <a class="navbar-brand" href="#">
+                        <h2 class=" text-white me-3 px-5"><b>CANCHAS</b></h2>
+                    </a>
+
+                    <div class="d-flex justify-content-between m-auto ">
+                        <input type="text" class="form-control" name="buscarCancha" placeholder="Buscar Cancha" autofocus required>
+                        <button type="button" class="btn btn-success">Ir</button>
+                    </div>
+
                 </form>
-                <table class="table table-hover table-success ">
-                    <thead>
-                        <tr>
-                            <th>Número</th>
-                            <th>Nombre</th>
-                            <th>Posición</th>
-                                
-                        </tr> 
-                    </thead>        
-                        
-                    <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td>Juan</td>
-                            <td>Arquero</td>
-                                <!--<td>{{numero}}</td>
-                                <td>{{nombre}}</td>
-                                <td>{{cantidadJugadores}}</td>-->
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>Pedro</td>
-                            <td>Defensor</td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>Carlos</td>
-                            <td>Defensor</td>
-                        </tr>
-                        <tr>
-                            <td>4</td>
-                            <td>Tomas</td>
-                            <td>Defensor</td>
-                        </tr>
-                        <tr>
-                            <td>5</td>
-                            <td>Mario</td>
-                            <td>Medio</td>
-                        </tr>
-                        <tr>
-                            <td>6</td>
-                            <td>Roman</td>
-                            <td>Medio</td>
-                        </tr>
-                        <tr>
-                            <td>7</td>
-                            <td>Jose</td>
-                            <td>Delantero</td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div id="scroll">
+                    <table class="table table-hover table-info">
+                        <thead class="fixed">
+                            <tr>
+                                <th>Nombre</th>
+                                <th>Dirección</th>
+                                <th>Formato</th>
+                                <th>Número</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {{#each cancha}}
+                            <tr>
+                                <td data-bs-toggle="tooltip" data-bs-placement="top" title="{{email}}">
+                                    {{nombreUsuario}}
+                                </td>
+                                <td><a href="/paginas/equipo/{{nombreEquipo}}&{{idDeportes}}">{{nombreEquipo}}</a></td>
+                                <td>{{deporte}}</td>
+                            </tr>
+                            {{/each}}
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-            <button class="btn btn-warning" type="submit">Buscar cancha</button>
+    
+    <div class="col-2  p-3">
+        <a id="volver" href="/paginas/deporte" type="button" class="btn btn-dark">Volver</a>
+    </div>
+
+</div>
+
+
+<!-- The Modal -->
+<div class="modal fade" id="misEquipo" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content bg-dark">
+
+            <!-- Modal Header -->
+            <div class="modal-header" id="misEquipo">
+                <h4 class="modal-title">MIS EQUIPOS</h4>
+                <button type="button" class="close" data-bs-dismiss="modal" id="crearEquipo">&times;</button>
+            </div>
+
+            <!-- Modal body -->
+            <div class="modal-body" id="misEquipo">
+                <table class="table text-center">
+                    <tbody>
+                        {{#each misEquipos}}
+                        <tr>
+                            <td><i>
+                                    <h4><a class="text-white"
+                                            href="/paginas/miEquipo/{{nombreEquipo}}">{{nombreEquipo}}</a></h4>
+                                </i></td>
+                        </tr>
+                        {{/each}}
+                    </tbody>
+                </table>
+
+            </div>
+            <!-- Modal footer -->
+            <div class="modal-footer" id="crearEquipo">
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
+            </div>
         </div>
     </div>
-</div> 
+</div>
