--- a/src/views/paginas/cancha.hbs
+++ b/src/views/paginas/cancha.hbs
@@ -3,7 +3,7 @@
     <form id="formCancha" class="row g-4" >
         <div class="col-md-12">
             
-            <div class="text-center"><h1>Mi Cancha</h1></div>
+            <div class="text-center"><h2>Nuevo Establecimiento</h2></div>
             <input type="text" class="form-control" id="validationDefault01" placeholder="Nombre" autofocus required>
             <br>
 
