--- a/src/views/paginas/duenio.hbs
+++ b/src/views/paginas/duenio.hbs
@@ -10,7 +10,10 @@
                         
                         <div class="d-flex justify-content-between m-auto ">
                             <div class="btn-group" role="group" aria-label="Basic outlined example">
-                                <a type="button" class="btn btn-primary" href="cancha">Agregar Cancha</a>
+                                <a type="button" class="btn btn-primary" href="cancha">Agregar Establecimiento</a>
+                            </div>
+                            <div class="btn-group" role="group" aria-label="Basic outlined example">
+                                <a type="button" class="btn btn-success" href="#">Agregar Cancha</a>
                             </div>
                         </div>
                         
